--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <p>Jag heter Gustaf Haglind och är en rookie web designer samt programmerare, musiker och tekniknörd från Örebro. Jag har designat hemsidor och programmerat både på fritiden och i skolan i drygt två år.</p>
 
     <h1>PROGRAMMERING / WEBBDESIGN</h1>
-    <p>MJag är kunnig i HTML5, CSS, C# samt ASP.NET Jag har även grundläggande kunskaper i Linux-miljö och Photoshop. Jag har gjort ett flertal hemsidor, bland annat <a href="http://royaltea.se" target="_new">mitt bands</a>.</p>
+    <p>Jag är kunnig i HTML5, CSS, C# samt ASP.NET Jag har även grundläggande kunskaper i Linux-miljö och Photoshop. Jag har gjort ett flertal hemsidor, bland annat <a href="http://royaltea.se" target="_new">mitt bands</a>.</p>
 
     <h1>MUSIK</h1>
     <p>Jag spelar elgitarr och har gjort i en stor del av mitt liv. Jag spelar i bandet <a href="http://royaltea.se" target="_new">Royaltea</a>. Vi spelar vad som genremässigt kan klassas somm klassisk hårdrock, men jag är öppen för fler besläktade genrer (funk, pop, rock, jazz mm.). Bor du i Örebro-området och är sugen på att spela? Hör av dig!</p>
