--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
 <footer>
-  Copyright Gusaf Haglind 2015
+  Copyright Gustaf Haglind 2015
 </footer>
  <!-- jQuery -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
