--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link href="css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+  <meta name="description" content="Frontend-utvecklare & musiker">
+  <meta name="keywords" content="HTML,CSS,JavaScript,Gustaf,Haglind,Musik">
+  <meta name="author" content="Gustaf Haglind">
 </head>
 <body>
   <div class="header">
